Update from web repo, autorefresh extension status, fix search scroll jumping issue

--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -548,6 +548,7 @@ a.disabled {
 }
 #editor-title-bar .editor-tags #note-tags-component-container {
   height: 50px;
+  overflow: scroll;
 }
 #editor-title-bar .editor-tags #note-tags-component-container iframe {
   height: 50px;
